Avoid scrollbar on empty textarea

--- a/resources/assets/css/outer/contact/contact.less
+++ b/resources/assets/css/outer/contact/contact.less
@@ -38,7 +38,7 @@
 
     .form-control {
       height: 3em;
-      padding: 1em;
+      padding: calc(~'1em - 1px');
       line-height: 1em;
       border-radius: 1.5em;
       box-shadow: none;
